# gitmatch

./: requirements.txt
backend/: index.py  pyproject.toml  requirements.txt  vercel.json
backend/config/: mongodb.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  theme.json  tsconfig.app.json  vite.config.ts
frontend/src/components/: ComparisonForm.tsx  ParticleBackground.tsx  ResultsDisplay.tsx
frontend/src/components/insights/: ActivityChart.tsx  FollowerNetwork.tsx  RepositoryStats.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx
