[tool.poetry]
name = "gitmatch"
version = "0.1.0"
description = ""
authors = ["a-clumsyman <chanakya.bevera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
phidata = "^2.6.0"
openai = "^1.57.0"
uvicorn = "^0.32.1"
fastapi = "0.115.4"
fastapi-cli = "0.0.5"
requests = "^2.32.3"
pymongo = "^4.6.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
